--- a/qml.qrc
+++ b/qml.qrc
@@ -3,5 +3,6 @@
         <file>main.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file>fonts/MaterialIcons.ttf</file>
+        <file>TimerComponent.qml</file>
     </qresource>
 </RCC>
