--- a/qml.qrc
+++ b/qml.qrc
@@ -11,5 +11,6 @@
         <file>ui/ControllerPage.qml</file>
         <file>ui/ReceiverPage.qml</file>
         <file>ui/DialogSettings.qml</file>
+        <file>ui/DialogDevicesConnected.qml</file>
     </qresource>
 </RCC>
